# air-quality-platform

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml
audits/: bias_audit.json  bias_audit.md
benchmarks/: retraining_benchmark.json
dashboards/data/: bias_by_region.csv  bias_by_state.csv  model_metrics.csv  monthly_state_summary.csv  powerbi_data.xlsx  station_aqi.csv
deploy/: README.md  cloudrun_deploy.sh
docs/: api_examples.sh
models/: metrics.json  model_card.md  weather_ablation.json
scripts/: benchmark_retraining.py  bias_audit.py  clean_data.py  export_for_dashboards.py  export_powerbi_workbook.py  pull_data.py  train_models.py  train_weather.py
src/api/: main.py  schemas.py
src/cleaning/: __init__.py  clean.py
src/features/: __init__.py  build_features.py
src/ingestion/: __init__.py  airnow_client.py  aqs_client.py  historical_weather.py  weather_client.py
src/models/: __init__.py  train.py
tests/: test_aqs_client.py  test_clean.py  test_features.py
